# tada

./: CMakeLists.txt  README  TODO  example.cpp
cmake/: DefineCMakeDefaults.cmake  DefineCompilerFlags.cmake  DefineInstallationPaths.cmake  FindCPPUNIT.cmake
demos/: CMakeLists.txt  mathfuncs.cpp  simple.cpp  utp_demo.cpp
demos/complex/: CMakeLists.txt  cp_mathfuncs.cpp
demos/inc/: mathfuncs.h
demos/multiprecision/: CMakeLists.txt  mp_mathfuncs.cpp  mp_printer.h  mp_simple.cpp  mpfrc++_demo.cpp
demos/rational/: CMakeLists.txt  rt_mathfuncs.cpp
mpfrc++/: CMakeLists.txt
src/: tada.h  utils.h  utp.h
tests/: CMakeLists.txt  UTPTest.cpp  UTPTest.h  common.h  test.cpp  utilsTest.cpp  utilsTest.h  utp_test.cpp
