# dependencies
find_package(CPPUNIT)
find_package(GMP)
find_package(MPFR)

if(CPPUNIT_FOUND AND GMP_FOUND AND MPFR_FOUND)
	message("Making unit test binaries..")
	set(common test.cpp utilsTest.cpp UTPTest.cpp)
	add_executable(test ${common})
	target_link_libraries(test ${GMP_LIBRARIES})
	target_link_libraries(test ${MPFR_LIBRARIES})
	target_link_libraries(test ${CPPUNIT_LIBRARIES})
	target_link_libraries(test mpfrc++)
else(CPPUNIT_FOUND AND GMP_FOUND AND MPFR_FOUND)
	message("Not making unit test binaries..")
endif(CPPUNIT_FOUND AND GMP_FOUND AND MPFR_FOUND)
